<resources>
    <string name="app_name">SpaceX App</string>

    <!--  Bottom navigation:  -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_vehicles">Vehicles</string>
    <string name="bottom_nav_upcoming">Upcoming</string>
    <string name="bottom_nav_latest">Latest</string>
    <string name="bottom_nav_company">Company</string>

    <!--  Headers:  -->
    <string name="header_splash">Splash</string>
    <string name="header_login">Login</string>
    <string name="header_registration">Registration</string>
    <string name="header_home">Home</string>
    <string name="header_vehicles">Vehicles</string>
    <string name="header_upcoming">Upcoming</string>
    <string name="header_latest">Latest</string>
    <string name="header_about_spacex">About SpaceX</string>
    <string name="header_vehicles_fragment">Vehicles fragment</string>

    <!--  Home screen:  -->
    <string name="home_launched_by">Launched by Falcon 9</string>
    <string name="home_launch_date">Launch date</string>
    <string name="home_launchpad">Launchpad</string>
    <string name="home_static_fire">Static fire</string>
    <string name="home_dragon_capsule">Dragon capsule</string>
    <string name="home_first_stage">First stage</string>
    <string name="home_landing_zone">Landing zone</string>
    <string name="home_details_are_yet_to_be_disclosed">Details are yet to be disclosed</string>
    <string name="home_booster_is_being_reused">Booster is being reused</string>

    <!--  Company screen  -->
    <string name="company_space_exploration">Space Exploration Technologies Corporation</string>
    <string name="company_founded_in_x_by_elon_musk" formatted="false">Founded in %d by %s</string>
    <string name="company_ceo">CEO</string>
    <string name="company_cto">CTO</string>
    <string name="company_coo">COO</string>
    <string name="company_valuation">Valuation</string>
    <string name="company_location">Location</string>
    <string name="company_employees">Employees</string>
    <string name="company_city_state" formatted="false">%s, %s</string>
    <string name="company_achievements">Achievements</string>

    <!--  Details screen  -->
    <string name="details_description">DESCRIPTION</string>
    <string name="details_maiden_launch">Maiden launch</string>
    <string name="details_crew_capacity">Crew capacity</string>
    <string name="details_active">Active</string>
    <string name="details_specifications">SPECIFICATIONS</string>
    <string name="details_launch_payload">Launch payload</string>
    <string name="details_return_payload">Return payload</string>
    <string name="details_reusable">Reusable</string>
    <string name="details_height">Height</string>
    <string name="details_diameter">Diameter</string>
    <string name="details_dry_weight">Dry weight</string>
    <string name="details_thrusters">THRUSTERS</string>
    <string name="details_model">Model</string>
    <string name="details_amount">Amount</string>
    <string name="details_primary_fuel">Primary fuel</string>
    <string name="details_oxidizer">Oxidizer</string>
    <string name="details_thrust">Thrust</string>
    <string name="details_isp">Isp</string>
    <string name="details_launch_cost">Launch cost</string>
    <string name="details_success_rate">Success rate</string>
    <string name="details_rocket_stages">Rocket stages</string>
    <string name="details_fairing_height">Fairing height</string>
    <string name="details_fairing_diameter">Fairing diameter</string>
    <string name="details_capability">CAPABILITY</string>
    <string name="details_low_earth_orbit">Low Earth Orbit</string>
    <string name="details_stages">STAGES</string>
    <string name="details_first_stage_thrust">First stage thrust</string>
    <string name="details_fuel_amount">Fuel amount</string>
    <string name="details_engines">Engines</string>
    <string name="details_second_stage_thrust">Second stage thrust</string>
    <string name="details_engines_title">ENGINES</string>
    <string name="details_thrust_to_weight">Thrust to weight</string>
    <string name="details_fuel">Fuel</string>
    <string name="details_sea_level_thrust">Sea level thrust</string>
    <string name="details_vacuum_thrust">Vacuum thrust</string>
    <string name="details_sea_level_isp">Sea level isp</string>
    <string name="details_vacuum_isp">Vacuum isp</string>
    <string name="details_weight">Weight</string>
    <string name="details_home_port">Home port</string>
    <string name="details_build_date">Build date</string>
    <string name="details_feature">Feature</string>
    <string name="details_primary_role">Primary role</string>
    <string name="details_secondary_role">Secondary role</string>
    <string name="details_status">Status</string>
    <string name="details_coordinates">Coordinates</string>
    <string name="details_current_speed">Current speed</string>
    <string name="details_missions_title">MISSIONS</string>
    <string name="details_mission">Mission</string>
    <string name="details_rocket_title">ROCKET</string>
    <string name="details_static_fire">Static fire</string>
    <string name="details_launch_window">Launch window</string>
    <string name="details_launch_success">Launch success</string>
    <string name="details_core_serial">Core serial</string>
    <string name="details_landing_zone">Landing zone</string>
    <string name="details_landing_success">Landing success</string>
    <string name="details_landing_legs">Landing legs</string>
    <string name="details_gridfins">Gridfins</string>
    <string name="details_payload_title">PAYLOAD</string>
    <string name="details_second_stage">Second stage</string>
    <string name="details_fairings_reused">Fairings reused</string>
    <string name="details_recovery_success">Recovery success</string>
    <string name="details_name">Name</string>
    <string name="details_manufacturer">Manufacturer</string>
    <string name="details_customer">Customer</string>
    <string name="details_nationality">Nationality</string>
    <string name="details_orbit">Orbit</string>
    <string name="details_periapsis">Periapsis</string>
    <string name="details_apoapsis">Apoapsis</string>
    <string name="details_inclination">Inclination</string>
    <string name="details_period">Period</string>
    <string name="details_mission_number" formatted="false">Mission #%s</string>
    <string name="details_reused">Reused</string>
    <string name="details_second_stage_payload">Second stage</string>
</resources>