<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/vehicles_fragment"
        android:icon="@drawable/ic_bottom_nav_vehicles"
        android:title="@string/bottom_nav_vehicles" />

    <item
        android:id="@+id/upcoming_fragment"
        android:icon="@drawable/ic_bottom_nav_upcoming"
        android:title="@string/bottom_nav_upcoming" />

    <item
        android:id="@+id/latest_fragment"
        android:icon="@drawable/ic_bottom_nav_latest"
        android:title="@string/bottom_nav_latest" />

    <item
        android:id="@+id/company_fragment"
        android:icon="@drawable/ic_bottom_nav_company"
        android:title="@string/bottom_nav_company" />
</menu>