<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_sign_in"
    app:startDestination="@id/splash_fragment">

    <!-- SplashFragment -->
    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.example.spacex_app.presentation.fragment.SplashFragment"
        android:label="@string/header_splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splash_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />
    </fragment>

    <!-- LoginFragment -->
    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.spacex_app.presentation.fragment.LoginFragment"
        android:label="@string/header_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_fragment_to_registration_fragment"
            app:destination="@id/registration_fragment" />
    </fragment>

    <!-- RegistrationFragment -->
    <fragment
        android:id="@+id/registration_fragment"
        android:name="com.example.spacex_app.presentation.fragment.RegistrationFragment"
        android:label="@string/header_registration"
        tools:layout="@layout/fragment_registration" />
</navigation>